--- a/Ui/Ui.csproj
+++ b/Ui/Ui.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="OrmDb" Version="1.6.2" />
   </ItemGroup>
 
