--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "connectionStrings": {
-    "DefaultConnectionString": "Server=HUSEYIN\\SQLEXPRESS;Database=OnCalisma;User Id=sa;Password=123456"
+    "DefaultConnectionString": "Your Connection String"
   }
 }
